-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 7
-
Component/s: client-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2200653 | 6u25 | Andrew Brygin | P3 | Closed | Won't Fix | |
| JDK-2200654 | OpenJDK6 | Andrew Brygin | P3 | Closed | Won't Fix |
I have animated gif image with transparent background. When i set the image as splash screen a black rectangle is seen. This is not seen in 6u10. Its reproducable in 6u14 & jdk7 . Hence its a regression . I tested on win_xp & open solaris.
Step to reproduced :
----------------
1) Run the attached testcase.
java -splash:animdog.fig GetSetImageUrlTest
Observe that a black background is seen behind the image, If you see the same , then the bug is reproduced.
I have attached the screen shot of the same.
Step to reproduced :
----------------
1) Run the attached testcase.
java -splash:animdog.fig GetSetImageUrlTest
Observe that a black background is seen behind the image, If you see the same , then the bug is reproduced.
I have attached the screen shot of the same.
- backported by
-
JDK-2200653 REGRESSION : A black background is seen for a transparent animated gif image for splash screen
-
- Closed
-
-
JDK-2200654 REGRESSION : A black background is seen for a transparent animated gif image for splash screen
-
- Closed
-