6853488: REGRESSION : A black background is seen for a transparent animated gif image for splash screen

Reviewed-by: igor, prr